--- a/Frame/Layout/4_SideBars/Gab/gabSidebar.html
+++ b/Frame/Layout/4_SideBars/Gab/gabSidebar.html
@@ -9,14 +9,13 @@
                        id="gab" d="m 110.3872,73.5915 45.9946,0 0,126.4853 c 0,60.6555 -33.0586,89.6896 -82.7904,89.6896 -22.7098,0 -42.8325,-7.7616 -55.1936,-18.3979 l 18.3979,-34.496 c 10.6363,7.1867 20.6976,11.4987 34.2085,11.4987 24.4347,0 39.383,-17.5355 39.383,-42.8325 l 0,-7.7616 C 100.0384,210.1381 85.3776,216.1749 69.2794,216.1749 29.8965,216.1749 0,183.4037 0,142.5835 0,101.7632 29.8965,68.992 69.2794,68.992 c 16.0982,0 30.759,6.0368 41.1078,18.3979 l 0,-13.7984 z M 78.1909,174.7797 c 17.5355,0 32.1963,-14.6608 32.1963,-32.1962 0,-17.5355 -14.6608,-32.1963 -32.1963,-32.1963 -17.5355,0 -32.1963,14.6608 -32.1963,32.1963 0,17.5354 14.6608,32.1962 32.1963,32.1962 z m 228.0395,36.7958 -45.9947,0 0,-11.4987 c -8.9115,10.0613 -21.2725,16.0981 -37.3707,16.0981 -32.1962,0 -50.0192,-22.4224 -50.0192,-48.0069 0,-37.9456 46.5696,-52.0315 86.815,-39.9579 -0.8624,-12.361 -8.624,-21.2725 -24.7222,-21.2725 -11.2112,0 -24.1472,4.312 -32.1962,8.9115 L 188.944,82.7904 c 10.6362,-6.8992 30.184,-13.7984 52.8938,-13.7984 33.6336,0 64.3926,18.9728 64.3926,70.7168 l 0,71.8667 z m -45.9947,-54.6187 c -21.56,-6.8992 -41.3952,-3.1621 -41.3952,12.0736 0,8.9115 7.4741,14.9483 16.3856,14.9483 10.6363,0 22.7099,-8.624 25.0096,-27.0219 z M 375.5882,0 l 0,87.3899 C 385.937,75.0288 400.5978,68.992 416.696,68.992 c 39.3829,0 69.2794,32.7712 69.2794,73.5915 0,40.8202 -29.8965,73.5914 -69.2794,73.5914 -16.0982,0 -30.759,-6.0368 -41.1078,-18.3978 l 0,13.7984 -45.9946,0 0,-211.5755 45.9946,0 z m 32.1963,174.7797 c 17.5355,0 32.1963,-14.6608 32.1963,-32.1962 0,-17.5355 -14.6608,-32.1963 -32.1963,-32.1963 -17.5355,0 -32.1963,14.6608 -32.1963,32.1963 0,17.5354 14.6608,32.1962 32.1963,32.1962 z"
                        style="fill:#00d178"></path></g></svg>
                 </div><br>
+
                 <div class="g_main g_height_45">
                     <svg class="g_main tc" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100%" height="100%" viewBox="-8.6929917 -8.6929917 1803.3613834 807.1523734" role="img">
 
                     <g><path fill="#787778"
                         id="minds" d="M69.2 263.2c27.6 56.8 55.5 112 83.7 165.6 28.2 53.6 57.7 108.6 88.5 165 4-7.6 9.8-18.5 17.4-32.7 7.6-14.2 16.4-30.5 26.4-48.9s20.7-38.3 32.1-59.7c11.4-21.4 23-43.1 34.8-65.1 11.8-22 23.5-43.6 35.1-64.8 11.6-21.2 22.4-41 32.4-59.4h7.8c4.4 38.4 8.5 75.5 12.3 111.3 3.8 35.8 7.7 71 11.7 105.6 4 34.6 8 68.8 12 102.6s8.4 67.3 13.2 100.5c-4.8-.8-9.5-1.2-14.1-1.2h-28.2c-4.6 0-9.3.4-14.1 1.2-4.4-53.2-8.8-104.8-13.2-154.8-4.4-50-9.8-101-16.2-153h-1.2c-27.6 50.4-54.7 100.5-81.3 150.3-26.6 49.8-51.9 101.9-75.9 156.3H227c-24-50.4-49.1-100.9-75.3-151.5-26.2-50.6-52.5-102.3-78.9-155.1h-1.2c-2.8 24.8-5.9 51.7-9.3 80.7-3.4 29-6.5 57.6-9.3 85.8-2.8 28.2-5.2 54.8-7.2 79.8s-3 45.5-3 61.5c-6.4-.8-13.4-1.2-21-1.2s-14.6.4-21 1.2C6 650.8 11.4 616.6 17 580.6S28 508.4 33.2 472c5.2-36.4 10-72.3 14.4-107.7 4.4-35.4 8.2-69.1 11.4-101.1h10.2zm495 163.2c0-26.4-.5-52.3-1.5-77.7-1-25.4-2.1-51.3-3.3-77.7 5.2.8 10.2 1.5 15 2.1 4.8.6 9.6.9 14.4.9 4.8 0 9.6-.3 14.4-.9 4.8-.6 9.8-1.3 15-2.1-1.2 26.4-2.3 52.3-3.3 77.7-1 25.4-1.5 51.3-1.5 77.7v103.2c0 26.4.5 52.4 1.5 78s2.1 50.8 3.3 75.6c-9.2-.8-19-1.2-29.4-1.2-10.4 0-20.2.4-29.4 1.2 1.2-24.8 2.3-50 3.3-75.6 1-25.6 1.5-51.6 1.5-78V426.4zM1068.8 691c-46-53.2-95-107.7-147-163.5s-104-111.3-156-166.5c-.4 11.2-.8 26.2-1.2 45-.4 18.8-.6 44.4-.6 76.8 0 8.4.1 18.8.3 31.2.2 12.4.4 25.4.6 39 .2 13.6.5 27.4.9 41.4s.8 27 1.2 39c.4 12 .8 22.5 1.2 31.5.4 9 .8 15.1 1.2 18.3-6.4-.8-13.4-1.2-21-1.2-8 0-15.4.4-22.2 1.2.8-4 1.7-11.4 2.7-22.2 1-10.8 1.9-23.7 2.7-38.7.8-15 1.7-31.3 2.7-48.9 1-17.6 1.8-35.2 2.4-52.8.6-17.6 1.1-34.8 1.5-51.6.4-16.8.6-31.8.6-45 0-38.4-.1-71.4-.3-99-.2-27.6-.7-48.2-1.5-61.8h9.6c24.4 26.4 50.5 54.7 78.3 84.9 27.8 30.2 55.4 60 82.8 89.4 27.4 29.4 53.4 57.2 78 83.4 24.6 26.2 46.1 48.5 64.5 66.9v-81.6c0-42-.3-82.9-.9-122.7-.6-39.8-1.9-77.3-3.9-112.5 8 2 14.8 3 20.4 3 4.8 0 11.2-1 19.2-3-.8 8.8-1.7 22-2.7 39.6-1 17.6-2 36.4-3 56.4s-1.9 39.6-2.7 58.8c-.8 19.2-1.2 34.6-1.2 46.2v36c0 13.6.1 27.8.3 42.6.2 14.8.4 29.7.6 44.7.2 15 .4 29 .6 42 .2 13 .3 24.3.3 33.9V691h-8.4zm129-264.6c0-26.4-.5-52.3-1.5-77.7-1-25.4-2.1-51.3-3.3-77.7 15.2.8 30.3 1.5 45.3 2.1 15 .6 30.1.9 45.3.9 15.2 0 30.3-.5 45.3-1.5 15-1 30.1-1.5 45.3-1.5 35.2 0 65.3 4.6 90.3 13.8 25 9.2 45.5 22.3 61.5 39.3 16 17 27.7 37.8 35.1 62.4 7.4 24.6 11.1 52.3 11.1 83.1 0 40-6.9 73.7-20.7 101.1-13.8 27.4-31.4 49.5-52.8 66.3-21.4 16.8-45 28.7-70.8 35.7-25.8 7-50.5 10.5-74.1 10.5-13.6 0-27-.2-40.2-.6-13.2-.4-26.6-.6-40.2-.6h-40.2c-13.2 0-26.6.4-40.2 1.2 1.2-24.8 2.3-50 3.3-75.6 1-25.6 1.5-51.6 1.5-78V426.4zm49.2 103.2c0 43.2 1.2 85.6 3.6 127.2 8.4 2 19.8 3.5 34.2 4.5 14.4 1 29.2 1.5 44.4 1.5 22 0 44-2.6 66-7.8 22-5.2 41.7-15 59.1-29.4 17.4-14.4 31.6-34.1 42.6-59.1s16.5-57.3 16.5-96.9c0-34.8-4.3-63.4-12.9-85.8-8.6-22.4-20.4-40.1-35.4-53.1s-32.9-22-53.7-27c-20.8-5-43.6-7.5-68.4-7.5-18 0-34.8.6-50.4 1.8-15.6 1.2-29.6 2.6-42 4.2-1.2 19.2-2.1 39.3-2.7 60.3-.6 21-.9 42.3-.9 63.9v103.2zm404.4 75.6c3.2 7.2 7.5 14.5 12.9 21.9 5.4 7.4 12 14.1 19.8 20.1 7.8 6 16.9 10.9 27.3 14.7 10.4 3.8 22 5.7 34.8 5.7 13.2 0 25.1-2.3 35.7-6.9 10.6-4.6 19.6-10.8 27-18.6 7.4-7.8 13.1-17 17.1-27.6 4-10.6 6-21.9 6-33.9 0-18.4-4.7-33-14.1-43.8-9.4-10.8-21.1-19.8-35.1-27-14-7.2-29.1-13.8-45.3-19.8-16.2-6-31.3-13.5-45.3-22.5-14-9-25.7-20.5-35.1-34.5-9.4-14-14.1-32.8-14.1-56.4 0-16.8 3-32.1 9-45.9 6-13.8 14.7-25.7 26.1-35.7 11.4-10 25.1-17.8 41.1-23.4 16-5.6 34-8.4 54-8.4 19.2 0 35.8 2.3 49.8 6.9 14 4.6 27 11.7 39 21.3-3.6 6.8-6.6 14-9 21.6-2.4 7.6-4.8 17.2-7.2 28.8h-7.2c-2-5.6-4.7-11.7-8.1-18.3-3.4-6.6-8-12.7-13.8-18.3-5.8-5.6-12.7-10.3-20.7-14.1-8-3.8-17.6-5.7-28.8-5.7s-21.5 1.8-30.9 5.4c-9.4 3.6-17.6 8.7-24.6 15.3-7 6.6-12.4 14.5-16.2 23.7-3.8 9.2-5.7 19.2-5.7 30 0 18.8 4.7 33.6 14.1 44.4 9.4 10.8 21.1 19.9 35.1 27.3 14 7.4 29.1 14 45.3 19.8 16.2 5.8 31.3 12.9 45.3 21.3 14 8.4 25.7 19.2 35.1 32.4 9.4 13.2 14.1 30.8 14.1 52.8 0 18.4-3.3 35.8-9.9 52.2-6.6 16.4-16.2 30.7-28.8 42.9-12.6 12.2-28 21.6-46.2 28.2-18.2 6.6-38.9 9.9-62.1 9.9-24.8 0-44.9-3.3-60.3-9.9-15.4-6.6-28.3-14.1-38.7-22.5 3.6-9.2 6.1-17.5 7.5-24.9 1.4-7.4 2.7-16.9 3.9-28.5h7.2z"/><path fill="#656565" d="M564.752 306l-1.98 29 1.98-29zM540 325l25-21 25 41z"/><path fill="#787778" d="M540 263v62l25-21z"/><path fill="#5C5C5C" d="M615 304l-25 41 50-20z"/><path fill="#787778" d="M640 325l-25-21 25-41z"/><path fill="#4A4A4A" d="M540 263h100l-50 82z"/><g><path fill="#FED12F" d="M550 74l106 44-76 61zM630 0l60 62-34 56zM540 263l110-32-10 32zM530 231l50-52-40 84zM490 62l60-62v74z"/><path fill="#FFF3CB" d="M580 179l70 52 6-113zM580 179l-96-17 46 69z"/><path fill="#FFDD63" d="M550 74l80-74 26 118z"/><path fill="#FFEDAC" d="M484 162l66-88 30 105z"/><path fill="#FFDD63" d="M540 263l40-84 70 52zM650 231l6-113 40 44zM484 162l6-100 60 12z"/><path fill="#FEE382" d="M656 118l34-56 6 100z"/><path fill="#FEF1C0" d="M630 0l-80 74V0z"/></g></g></svg>
-                </div><br>
-
-                <a class="g_main g_flew_row g_pad_tb_10 g_pad_lr_15 g_td_none"></a>
+                </div><br><br>
 
                 <div id="AVINAME" class="g_align_center">
                     <div class="g_main g_margin_top_32 g_border_radius g_border_color g_border_width_6 g_align_center">
@@ -24,7 +23,7 @@
                     <div class="g_main _g_ml_15 ">
                         <div class="g_main g_mw g_align_center">
                             <span class="g_main g_flew_row g_mw g_fsh g_of_x g_primary_text">&nbsp;</span>
-                                <bdi class="g_setty g_spacewrap ">
+                                <bdi class="g_setty g_spacewrap">
                                     <strong class="g_setty g_overflow_wrap  g_spacewrap g_fontw_600 g_primary_text g_margin_r_2 .g_line_h_1quart g_font_medium g_text_center">FediVerse</strong></bdi>
 
                                 <svg class="_33mR1 g_main" version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="15px" viewBox="0 0 32 32" xml:space="preserve" role="img">
@@ -32,8 +31,8 @@
                                     <title>Verified Account</title>
                                     <g><path fill="#3E99ED" d="M 27.31 4.69 C 24.29 1.66 20.27 0 16 0 C 11.73 0 7.71 1.66 4.69 4.69 C 1.66 7.71 0 11.73 0 16 C 0 20.27 1.66 24.29 4.69 27.31 C 7.71 30.34 11.73 32 16 32 C 20.27 32 24.29 30.34 27.31 27.31 C 30.34 24.29 32 20.27 32 16 C 32 11.73 30.34 7.71 27.31 4.69 Z M 23.64 12.19 L 14.7 21.13 C 14.52 21.32 14.28 21.41 14.04 21.41 C 13.8 21.41 13.56 21.32 13.38 21.13 L 8.36 16.11 C 7.99 15.75 7.99 15.15 8.36 14.79 C 8.72 14.42 9.32 14.42 9.68 14.79 L 14.04 19.14 L 22.32 10.87 C 22.68 10.5 23.28 10.5 23.64 10.87 C 24.01 11.23 24.01 11.82 23.64 12.19 Z M 23.64 12.19"></path></g></svg>
 
-                            <span class="g_setty g_display_flex g_spacewrap _2xqBt g_of_x g_grey_text g_fontw_400 grnpY g_font_medium">@GreyingError</span>
-                        </div></div>
+                                    <span class="g_setty g_display_flex g_spacewrap _2xqBt g_of_x g_grey_text g_fontw_400 grnpY g_font_medium">@GreyingError</span>
+                    </div></div>
 
                     <div class="g_main  g_margin_top_5 g_flew_row g_pad_lr_15 col-xl-3 col-lg-3 col-md-4 col-sm-4 g_align_center">
                         <div class="g_main _g_ml_15">
@@ -68,9 +67,9 @@
 
                                 <span class="g_main g_setty g_green_text g_font_sizevar  g_fontw_600 g_text_left">2.95k</span></a>
                                 <span class="g_main g_setty g_grey_text g_font_varsizer g_fontw_500 g_text_left" data-text="Follows">BlockBy</span>
-                            </div></div>
-                        </div></div>
-                <div class="g_align_center">
+                            </div></div></div>
+                </div>
+                <div id="Sjoin" class="g_align_center">
 
                     <div class=" g_main  g_flew_row g_pad_lr_15 col-xl-4 col-lg-4 col-md-4 col-sm-4 g_align_center">
                         <div id="GabNAME" class="g_align_center">
@@ -94,7 +93,7 @@
                                         <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center tc">Gab</span></a>
                                 </div></div></div>
                             </div></div></div>
-                </div>
+                        </div>
 
                     <div class=" g_main g_flew_row g_pad_lr_15 col-xl-4 col-lg-4 col-md-4 col-sm-4 g_align_center">
 
@@ -120,7 +119,7 @@
                                         <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center tc">Minds</span></a>
                                 </div></div></div>
                             </div></div></div>
-                </div>
+                        </div>
 
                     <div class=" g_main  g_flew_row g_pad_lr_15 col-xl-4 col-lg-4 col-md-4 col-sm-4 g_align_center">
                         <div id="GITNAME" class="g_align_center">
@@ -136,15 +135,15 @@
 
                                             <title>Verified Account</title>
                                             <g><path fill="#3E99ED" d="M 27.31 4.69 C 24.29 1.66 20.27 0 16 0 C 11.73 0 7.71 1.66 4.69 4.69 C 1.66 7.71 0 11.73 0 16 C 0 20.27 1.66 24.29 4.69 27.31 C 7.71 30.34 11.73 32 16 32 C 20.27 32 24.29 30.34 27.31 27.31 C 30.34 24.29 32 20.27 32 16 C 32 11.73 30.34 7.71 27.31 4.69 Z M 23.64 12.19 L 14.7 21.13 C 14.52 21.32 14.28 21.41 14.04 21.41 C 13.8 21.41 13.56 21.32 13.38 21.13 L 8.36 16.11 C 7.99 15.75 7.99 15.15 8.36 14.79 C 8.72 14.42 9.32 14.42 9.68 14.79 L 14.04 19.14 L 22.32 10.87 C 22.68 10.5 23.28 10.5 23.64 10.87 C 24.01 11.23 24.01 11.82 23.64 12.19 Z M 23.64 12.19"></path></g></svg>
-                                </div></div>
 
                             <div class=" g_main g_margin_bot_15 g_margin_top_5 g_flew_row g_align_center">
                                 <div class="g_main _1XpDY-">
                                     <div class="g_main g_mw">
                                         <a class="g_main g_cursor g_td_none g_bg_color_tparent g_outline_none g_flew_grow" title="Join Git" aria-label="SignUp" target="popup" onclick="window.open('https://github.com/signup?ref_cta=Sign+up&amp;ref_loc=header+logged+out&amp;ref_page=%2F&amp;source=header-home','popup','width=600,height=600'); return false;">
 
-                                        <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center tc">GitHub</span></a>
+                                        <span class="g_main g_setty g_green_text g_font_sizevar g_fontw_600 g_text_center tc">Git</span></a>
                                     </div></div></div>
                             </div></div></div>
-            </div>
+                        </div>
+                </div></div>
             </main></section>
