--- a/Frame/CSS/MainPage.css
+++ b/Frame/CSS/MainPage.css
@@ -1527,6 +1527,14 @@ img::-moz-selection {
     color: #999999;
 }
 
+.dltabi td {
+    font-weight: normal;
+    font-size: 1em;
+  -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+     -moz-box-shadow: 0 2px 2px -2px #0E1119;
+          box-shadow: 0 2px 2px -2px #0E1119;
+}
+
 .dltab td {
     font-weight: normal;
     font-size: 1em;
@@ -1544,9 +1552,19 @@ img::-moz-selection {
     padding: 0 0 1em 0;
 }
 
+.dltabi {
+    color:#999999;
+    text-align: center;
+    overflow: hidden;
+    width: 100%;
+    margin: 0 auto;
+    display: table;
+    padding: 0 0 1em 0;
+}
+
 .dltab .blueOn {
     width:100%; 
-    color:#8db2e5; 
+    color:#5b5b5b; 
     background-color:#999999;
 }
 
@@ -1555,6 +1573,10 @@ img::-moz-selection {
   text-decoration: none;
 }
 
+.dltabi td, .dltabi th {
+    padding-bottom: 2%;
+    padding-top: 2%;
+}
 .dltab td, .dltab th {
     padding-bottom: 2%;
     padding-top: 2%;
