SoftWare Links Fixed

--- a/Frame/Layout/3_Content/BTech/softwaremob.html
+++ b/Frame/Layout/3_Content/BTech/softwaremob.html
@@ -313,7 +313,7 @@
                             <br> You will not stop using the Chromium framework.
                             <br> Therefore the learning curve is non-existent and the familiarity is preserved.</p>
                         <p>Most importantly, your freedom is given back to you. An Open Sourced Chrome is now in your hands.</p>
-                        <p>What is Brave? It is best answered by Brave themselves:<br> <a href="https://brave.com/" target="_blank">To Download and Learn More</a></p>
+                        <p>What is Brave? It is best answered by Brave themselves:<br> <a onclick="window.open('https://brave.com','popup','width=600,height=600'); return false;">To Download and Learn More</a></p>
                         <p>Now that you have downloaded Brave changing over to Brave is simple. Just export your bookmarks and personal info/passwords(if you use those features) and then import them into Brave, thats it.</p>
                         <p>It is so easily done that even the non-tech savvy can say goodbye to trackers, ads, and Google agents... to say hello Brave Search Engine! A complete alternative that is faster, more secure, and feature packed.</p> <span class="img-responsive img-circle center-block TechMainSW swt-TechSWBraveSearch">&nbsp;</span><br>
                         <p>Yes! Brave runs flawlessly on mobile devices as well. It can also be synced to other devices. Go from device to device and never lose your spot - securely and quickly.</p></section></div></section>
@@ -338,7 +338,7 @@
                         <hgroup>
                             <h4>Proton Mail/VPN</h4></hgroup>
                         <p>Email which just so happens to double as a VPN: although I should probably say a VPN that doubles as an Email. Email is prob the more important Feature tho. Anyways.</p>
-                        <p><a class="tc" href="https://proton.me/mail" target="_blank">ProtonMail</a> and <a class="tc" href="https://protonvpn.com/" target="_blank">ProtonVPN</a>.</p>
+                        <p class="tc"><a onclick="window.open('https://pr.tn/ref/5972T1W4XRB0','popup','width=600,height=600'); return false;">ProtonMail and ProtonVPN.</a></p>
                         <p>ProtonMail is a company that values privacy. I believe everyone should know, use, and support them! All of the Proton features are encrypted and bundled so (like Google) one account syncs with everything Proton.</p>
                         <p>There is not too much to add here as it is just an Email and a VPN. I have come to discover that many people do not have a VPN or use a VPN (for what ever reason). I can only strongly suggest that they should.</p>
                         <p>As for what a VPN is and isn't? I will not cover that here - being a completely different topic. If you value privacy you should not be using Gmail, Yahoo, Hotmail, etc. Google employees and their affiliates, advertisers, sister corporations, friends, partners, agents, NSA, government, banks, anyone really - combs through your emails.</p>
@@ -357,9 +357,9 @@
                 <!--Proton Extra Images-->
                     <section aria-label="" class="bible-content">
                         <div class="row">
-                            <div class="col-sm-4 center-block"> <span class="img-responsive img-circle center-block TechSecSW swt-TechSWProDrive">&nbsp;</span> <a class="pb" href="https://proton.me/drive" target="_blank">Drive</a></div>
-                            <div class="col-sm-4 center-block"> <span class="img-responsive img-circle center-block TechSecSW swt-TechSWProPas">&nbsp;</span> <a class="pb" href="https://proton.me/pass" target="_blank">Pass</a></div>
-                            <div class="col-sm-4 center-block"> <span class="img-responsive img-circle center-block TechSecSW swt-TechSWProCal">&nbsp;</span> <a class="pb" href="https://proton.me/calendar" target="_blank">Calendar</a> </div></div></section>
+                            <div class="col-sm-4 center-block"> <span class="img-responsive img-circle center-block TechSecSW swt-TechSWProDrive">&nbsp;</span> <a class="pb" onclick="window.open('https://pr.tn/ref/5972T1W4XRB0','popup','width=600,height=600'); return false;">Drive</a></div>
+                            <div class="col-sm-4 center-block"> <span class="img-responsive img-circle center-block TechSecSW swt-TechSWProPas">&nbsp;</span> <a class="pb" onclick="window.open('https://pr.tn/ref/5972T1W4XRB0','popup','width=600,height=600'); return false;">Pass</a></div>
+                            <div class="col-sm-4 center-block"> <span class="img-responsive img-circle center-block TechSecSW swt-TechSWProCal">&nbsp;</span> <a class="pb" onclick="window.open('https://pr.tn/ref/5972T1W4XRB0','popup','width=600,height=600'); return false;">Calendar</a> </div></div></section>
                 <!--Proton Extra Menu-->
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -404,7 +404,7 @@
                     <p>Even though it is limited because it is only Ethereum based — and it only uses Wyre — a lot can be achieved through this Wallet. It is superb; especially if you are just getting started in the Crypto world. This replaces MetaMask and there is no need for an extension.</p>
                     <p>These features are whole programs that are used daily. I feel they are relevant enough to add them to the list.</p>
                     <hgroup class="bible-content">
-                        <h5><a href="https://uphold.com/signup?referral=aeb7fe32a1" target="_blank">Uphold</a></h5></hgroup>
+                        <h5><a onclick="https://uphold.com/signup?referral=aeb7fe32a1','popup','width=600,height=600'); return false;">Uphold</a></h5></hgroup>
                     <p>If you are serious about Crypto or want to get an Official Crypto Wallet.</p>
                     <p>We can do this directly from the Brave Browser and Link. In this case you would create an Uphold account. This process will require verification (ID and typical financial information) because you are opening a Crypto Bank Account - which even offers a debit card. . I cover this topic in more detail within the "Crypto Talk" section.</p>
                     <p>Once you are verified you will have access to the entire Exchange; which has a PayPalish feeling and allows you to send and buy Crypto all on the fly.</p>
@@ -475,10 +475,10 @@
             <tbody>
                 <tr>
                     <td onclick="window.open('https://www.minds.com/?referrer=greyingerror9','popup','width=600,height=600'); return false;">Minds Social</td>
-                    <td class="yelloOn" onclick="window.open(https://github.com/minds/','popup','width=600,height=600'); return false;">Open Source</td></tr>
+                    <td class="yelloOn" onclick="window.open('https://github.com/minds/','popup','width=600,height=600'); return false;">Open Source</td></tr>
                 <tr>
                     <td onclick="window.open('https://spec.matrix.org/latest/','popup','width=600,height=600'); return false;">Matrix Develop's</td>
-                    <td class="yelloOn" onclick="https://github.com/matrix-org','popup','width=600,height=600'); return false;">Open Source</td></tr></tbody></table>
+                    <td class="yelloOn" onclick="window.open('https://github.com/matrix-org','popup','width=600,height=600'); return false;">Open Source</td></tr></tbody></table>
         </section>
         <div class="clearfix"></div>  
         <!--WebCom Menu-->
@@ -491,7 +491,7 @@
             <section aria-label="Beginhere" class="comment-content">
                 <hgroup class="bible-content">
                     <h5 class="tc">Messengers</h5></hgroup>
-                <p class="tc"><a href="https://signal.org/en/" target="_blank">Signal</a> and <a href="https://telegram.org/" target="_blank">Telegram</a>
+                <p class="tc"><a onclick="window.open('https://signal.org/en/','popup','width=600,height=600'); return false;">Signal</a> and <a onclick="window.open('https://www.telegram.org/','popup','width=600,height=600'); return false;">Telegram</a>
                 <br>They both sort of just co-exist.</p>
                 <p>Signal is Open Sourced end-to-end encryption.
                 <br>Telegram is not.</p>
@@ -500,7 +500,7 @@
                 <p>Both require a phone number - Signal is great for friends, family, and those close to you being more personal.</p>
                 <p>Telegram starts to out beat Signal in this regard when joining channels, groups, etc where the number can be hidden - albeit not secured - but hidden.</p>
                 <p>Neither replace SMS(Closed Systems) - a pro/con of what made Signal so great to begin with.</p>
-                <p><a onclick="window.open(https://discord.com','popup','width=600,height=600'); return false;">Discord</a> is better than both - however highly politically correct and censored. Minds has potential to be a solid alternative to Discord Server.</p>
+                <p><a onclick="window.open('https://discord.com','popup','width=600,height=600'); return false;">Discord</a> is better than both - however highly politically correct and censored. Minds has potential to be a solid alternative to Discord Server.</p>
                 <hgroup class="bible-content">
                     <h5 class="tc">Social Media</h5></hgroup>
                 <p class="tc">Gab and Minds
@@ -510,7 +510,7 @@
                 <p>With that said GAB is still socially hands down unmatchable.</p>
                 <hgroup class="bible-content">
                     <h5 class="tc">Default NineNeins Support Messenger/Server</h5></hgroup>
-                <p><a onclick="window.open(https://getsession.org','popup','width=600,height=600'); return false;">Sessions</a> is Open Sourced end-to-end encryption. Anonymous, and No Phone number required.
+                <p><a onclick="window.open('https://getsession.org','popup','width=600,height=600'); return false;">Sessions</a> is Open Sourced end-to-end encryption. Anonymous, and No Phone number required.
                 <br> This ensures NineNeins collects 0 information such as phone numbers, emails, etc.
                 <br> As protects our Dev team from providing the same revealing information.</p>
                 <p>Sessions is our recommendation and choice - with the only flaw being you will need to convert people to the platform.</p> 
@@ -546,16 +546,16 @@
         <section aria-label="messTools" id="Deve" class="panel-collapse collapse">
             <hgroup class="bible-content">
                 <h5 class="tc">DevTools</h5></hgroup>
-            <p class="tc">A developers best-friends! ( more on this in <a onclick="window.open(https://sublimetext.com','popup','width=600,height=600'); return false;">Sublime Text</a> and FashCode )</p>
+            <p class="tc">A developers best-friends! ( more on this in <a onclick="window.open('https://sublimetext.com','popup','width=600,height=600'); return false;">Sublime Text</a> and FashCode )</p>
             <p>Granted this can/will be a very steep learning curve if you are new to coding, development, HTML, CSS, JS, Python, or Node frameworks. But is well worth it - depending on what you are looking to accomplish.</p>
             <p>Finally, on the WEB side of Tech things, we come to those in the Blog and Website Category. Domain (DNS), Host, and CDN (Content Delivery Network).</p>
             <p>Will be the most unhelpful due to this is a revolving door.</p>
             <p>Outside of communication we move to priceless Online creation tools I use and recommend for on the fly.
             <br> Also, they are useful to people who are just starting content creation, coding, etc who lack finance, equipment, software etc. A gold mine to start from include :</p>
-            <p class="tc"><a onclick="window.open(https://tinypng','popup','width=600,height=600'); return false;">TinyPng(Image Compressor)</a>: also has a PhotoShop plugin,
-            <br><a onclick="window.open(https://webtopng.com','popup','width=600,height=600'); return false;">Webp(Specific Image Converter)</a>: for download version there is WebPconv and a Photoshop plugin,
-            <br><a onclick="window.open(https://gtmetrix.com','popup','width=600,height=600'); return false;">GTMetrix(WebDesign)</a>,
-            <br> and <a onclick="window.open(https://beautifytools.com','popup','width=600,height=600'); return false;">BeautifyTools(A Full Toolbox)</a>: for download SubLime plugins.</p>
+            <p class="tc"><a onclick="window.open('https://tinypng','popup','width=600,height=600'); return false;">TinyPng(Image Compressor)</a>: also has a PhotoShop plugin,
+            <br><a onclick="window.open('https://webtopng.com','popup','width=600,height=600'); return false;">Webp(Specific Image Converter)</a>: for download version there is WebPconv and a Photoshop plugin,
+            <br><a onclick="window.open('https://gtmetrix.com','popup','width=600,height=600'); return false;">GTMetrix(WebDesign)</a>,
+            <br> and <a onclick="window.open('https://beautifytools.com','popup','width=600,height=600'); return false;">BeautifyTools(A Full Toolbox)</a>: for download SubLime plugins.</p>
             <p>These easy internet resources are excellent for last-minute planning, especially for those on a tight budget because they are completely free. There are a ton of different resources available online, but these optimizers will take you down that specific rabbit hole.</p>
         </section><br>
         <div class="clearfix"></div>
@@ -586,11 +586,11 @@
                         <p>I recommend utilizing programs like Apache, for example, to host yourself, but that is a very different experience. I won't get into server niches here; for instance, Github hosts this website.</p>
                         <hgroup class="bible-content">
                             <h5>DNS/CDN</h5></hgroup><span class="img-responsive img-circle center-block TechSecSW swt-TechSWCloudF">&nbsp;</span>
-                        <p><a href="https://www.cloudflare.com/" target="_blank">Cloudfare</a> needs no introduction. <a href="https://www.basedflare.com/" target="_blank">BasedFlare</a> however may need one. This topic can be broken down into 30 different sections of tech babble, to an even smaller niche of some I rather just put both on the table the options here are even more limited.</p>
+                        <p><a onclick="window.open('https://www.cloudflare.com/','popup','width=600,height=600'); return false;">Cloudfare</a> needs no introduction. <a onclick="window.open('https://www.basedflare.com/','popup','width=600,height=600'); return false;">BasedFlare</a> however may need one. This topic can be broken down into 30 different sections of tech babble, to an even smaller niche of some I rather just put both on the table the options here are even more limited.</p>
                         <div class="row">
                             <div class="col-sm-6"><span class="img-responsive img-circle center-block TechSecSW swt-TechSWJSD">&nbsp;</span></div>
                             <div class="col-sm-6"><span class="img-responsive img-circle center-block TechSecSW swt-TechSWCDNJS">&nbsp;</span></div></div>
-                        <p><a href="https://www.jsdelivr.com/" target="_blank">JSDeliver</a> for libraries. <a href="https://cdnjs.com/" target="_blank">CDNJS</a> for both JS and CSS.</p>
+                        <p><a onclick="window.open('https://www.jsdelivr.com/','popup','width=600,height=600'); return false;">JSDeliver</a> for libraries. <a onclick="window.open('https://cdnjs.com/','popup','width=600,height=600'); return false;">CDNJS</a> for both JS and CSS.</p>
                         <p>CDNs for the development stage, testing, or just to try out a snippit, or library.</p></section></div></section>
         </section> 
         <div class="clearfix"></div>
@@ -703,7 +703,7 @@
                         <section aria-label="Maintainz" class="comment-content">
                         <hgroup>
                             <h4>Maintenance</h4></hgroup>
-                        <p>The Components include <a href="https://www.ccleaner.com/ccleaner" target="_blank">CCleaner</a> and needs no introduction.</p>
+                        <p>The Components include CCleaner and needs no introduction.</p>
                         <p>The only real alternative to CCleaner would be BleachBit, which is an Open Source - I personally use. As we jump to cover Duplicates with Duplicate Cleaner.</p>
                         <p>However, we will start off first with one many may be unfamiliar with but should def know about -Revo Uninstaller.</p>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6"> <span class="img-responsive center-block TechFolder TechSW swt-TechSWRCleanFolder">&nbsp;</span>
@@ -809,7 +809,7 @@
                         <section aria-label="Wampz" class="comment-content">
                             <hgroup>
                                 <h4>Wamp</h4></hgroup>
-                            <p>Next up- there is <span>WampServer</span> and <a class="pb" href="https://www.apache.org/"> Apachee</a>.</p>
+                            <p>Next up- there is <span>WampServer</span> and <a class="pb" onclick="window.open('https://www.apache.org','popup','width=600,height=600'); return false;"> Apachee</a>.</p>
                             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4"><span class="img-responsive center-block">&nbsp;</span></div>
                             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4"><span class="img-responsive center-block TechFolder TechSW swt-TechSWWampFolder">&nbsp;</span>
                                 <div class="panel panel-default">
@@ -980,7 +980,7 @@
                         <td class="yelloOn" onclick="window.open('','popup','width=600,height=600'); return false;">Free • Proprietary</td></tr>
                     <tr>
                         <td onclick="window.open('https://keepass.info/','popup','width=600,height=600'); return false;">KeePass</td>
-                        <td class="yelloOn" onclick="window.open(https://github.com/keepassxreboot','popup','width=600,height=600'); return false;">Open Source</td></tr></tbody></table>
+                        <td class="yelloOn" onclick="window.open('https://github.com/keepassxreboot','popup','width=600,height=600'); return false;">Open Source</td></tr></tbody></table>
             </section>
             <!--Layout Breaker--></div><!--Layout Breaker-->
             <div class="clearfix"></div>
